# rdp-anchor

./: .gitignore  Cargo.toml  INSPECT_MSTSC.md  README.md  config.rs  index.html  justfile  lib.rs  monitor.rs  rdp.rs  session.rs  tauri.conf.json
docs/: README.en_US.md  README.ja_JP.md  README.template.md
icons/: icon.icns
scripts/: gen-readme.ps1  package-zip.ps1  release.ps1
src/: config.rs  lib.rs  main.rs  monitor.rs  rdp.rs  session.rs
